<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
	<LinearLayout
		android:orientation="horizontal" 
		android:layout_width="fill_parent"


		android:layout_height="50dip">

		<TextView
		    android:layout_width="0dip"
		    android:layout_height="wrap_content"
		    android:layout_gravity="center"
		    android:gravity="center"
		    android:textStyle="bold"
		    android:layout_weight="1.0"
		    android:text="@string/account"
		    android:textSize="15dip" />

		<TextView 
		    android:text="@string/account_number"
		    android:layout_gravity="center_vertical" 
		    android:gravity="center"
		    android:textStyle="bold"
			android:layout_width="0dip" 
			android:layout_weight="1.0" 
			android:textSize="15dip"
			android:layout_height="wrap_content" />
		<TextView 
		    android:text="@string/account_password"
		    android:layout_gravity="center_vertical" 
		    android:gravity="center"
		    android:textStyle="bold"
			android:layout_width="0dip" 
			android:layout_weight="1.0" 
			android:textSize="15dip"
			android:layout_height="wrap_content" />
	</LinearLayout>

	<ListView
	    android:id="@+id/ListView01"
	    android:gravity="center"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_weight="1" />

	<Button
	    android:id="@+id/butn"
	    android:layout_width="fill_parent"
	    android:layout_height="50dip"

	    android:text="@string/account_add"
	    android:textSize="15dip" />
</LinearLayout>