<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/password_addlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:focusable="true"  
   	android:focusableInTouchMode="true" >
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/account"
     />
	
    <EditText
        android:id="@+id/edt_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_vertical"
        android:textSize="18sp"
        android:ems="10" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
           android:text="@string/account_number"
     />
	
    <EditText
        android:id="@+id/edt_accountnumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_gravity="center"
        android:textSize="18sp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
           android:text="@string/account_password"
     />
	
    <EditText
        android:id="@+id/edt_accountpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_gravity="center"
        android:textSize="18sp"
        android:singleLine="false" />

    <Button
        android:id="@+id/btn_confirm"
   		 android:layout_width="206dp"
        android:layout_height="wrap_content"
         android:text="@string/account_confirm"
      />

</LinearLayout>
