<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/contact"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btadd_contact"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/add"
            android:onClick="btnadd_contact_Click" />

        <!-- android:layout_toLeftOf="@id/btnSendSms" 控制该子组件位于 btnSendSms组件的左方 -->

        <EditText
            android:id="@+id/smsPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/btadd_contact"
            android:hint="@string/recipient" >
        </EditText>
    </RelativeLayout>

    <EditText
        android:id="@+id/smsContent"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:hint="@string/addtext" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/sendSMS"
            android:layout_width="90dp"
            android:layout_height="50dp"
            android:text="@string/send"
            android:textSize="20dp" 
            android:onClick="btnsendSMS_Click"/>

        <Button
            android:id="@+id/smsDraft"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:text="保存到草稿箱"
            android:textSize="20dp" 
            android:visibility="gone"
            android:onClick="btnsmsDraft_Click"/>
    </LinearLayout>

</LinearLayout>