<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dip"
    android:layout_height="180dip"
    android:gravity="center_horizontal"
    android:orientation="vertical" >
    <TextView
        android:id="@+id/view11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/typenewpassword"
        android:textSize="24sp"
     />
	
    <LinearLayout
        android:layout_width="300dip"
        android:layout_height="80dip"
        android:gravity="center_vertical"
        android:orientation="vertical" >
    
    <EditText
     	 android:id="@+id/entry_password11"
        android:layout_width="300dip"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />
    
    </LinearLayout>
   
    <LinearLayout
        android:layout_width="300dip"
        android:layout_height="50dip"
        android:gravity="center"
        android:orientation="horizontal" >
    
    <Button
        android:id="@+id/entry_button11"
   		android:layout_width="140dip"
        android:layout_height="40dip"
        android:text="@string/account_confirm"
    />
    
    <Button
        android:id="@+id/passwordbook_modifypassword"
   		android:layout_width="140dip"
        android:layout_height="40dip"
        android:text="@string/cancel"
    />
    
    </LinearLayout>
</LinearLayout>