<?xml version="1.0" encoding="utf-8"?>
<!-- 正常登陆的Dialog -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dip"
    android:layout_height="180dip"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/te"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/typenewpassword"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="300dip"
        android:layout_height="80dip"
      
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
          
            android:textColor="#ff000000" /><!--android:text="请输入密码,若不设置初始密码则为123："  -->  

        <EditText
            android:id="@+id/et_normal_entry_pwd"
            android:layout_width="300dip"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="300dip"
        android:layout_height="50dip"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:layout_width="140dip"
            android:layout_height="40dip"
            android:text="@string/confirm"
            android:id="@+id/bt_normalt_dialog_ok" />

        <Button
            android:layout_marginLeft="5dip"
            android:layout_width="140dip"
            android:layout_height="40dip"
            android:text="@string/cancel"
            android:id="@+id/bt_normal_dialog_cancle" />
    </LinearLayout>

</LinearLayout>